packages/es5-ext@4d7f742/test/error/valid-error.js
"use strict";module.exports=function(r,o){var t=new Error;o(r(t),t,"Error"),o["throws"](function(){r({})},"Other")};